--- a/.github/workflows/build_and_push.yml
+++ b/.github/workflows/build_and_push.yml
@@ -13,7 +13,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
+  build_and_push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -21,7 +21,8 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
-
+    outputs:
+      tag: ${{ steps.meta.outputs.version }}
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
@@ -92,12 +93,15 @@ jobs:
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes --key env://COSIGN_PRIVATE_KEY {}@${DIGEST}
 
+  scan:
+    runs-on: ubuntu-latest
+    needs: build_and_push
+    if: ${{ github.event_name != 'pull_request' }}
+    steps:
       - name: Run Trivy vulnerability scanner
-        if: ${{ github.event_name != 'pull_request' }}
-        continue-on-error: true
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build_and_push.outputs.tag }}
           format: "table"
           exit-code: "1"
           ignore-unfixed: true
